--- a/index1.html
+++ b/index1.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="./main.css">
+	<!-- <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script> -->
 </head>
 <body>
   <div class="wrapper">
@@ -35,7 +36,7 @@
     <audio class="hidden" src="http://mp3.9ku.com/hot/2010/10-19/400027.mp3" loop="loop"></audio>
 
   </div>
-  <script src="//cdn.bootcss.com/zepto/1.2.0/zepto.min.js"></script>
+  <script src="https://cdn.bootcss.com/zepto/1.2.0/zepto.min.js"></script>
   <script src="./main.js"></script>
 </body>
 </html>
