--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 </head>
 <body>
+	<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="https://music.163.com/outchain/player?type=2&id=543798909&auto=1&height=32" style="position:absolute;top:20px;left: 22%;"></iframe>
   <div class="wrapper">
+		
     <div class="init-box">
       <div class="start-btn">
       </div>
@@ -33,9 +35,10 @@
       <div class="history-score"></div>
       <div class="replay-btn"></div>
     </div>
-    <audio class="hidden" src="http://mp3.9ku.com/hot/2010/10-19/400027.mp3" loop="loop"></audio>
-
-  </div>
+		
+    <!-- <audio class="hidden" src="https://music.163.com/outchain/player?type=2&id=543798909&auto=1" ></audio> -->
+		<!-- <iframe frameborder="no" marginwidth="0" marginheight="0"  src="https://music.163.com/outchain/player?type=2&id=543798909&auto=1&height=66"></iframe> -->
+	</div>
   <script src="https://cdn.bootcss.com/zepto/1.2.0/zepto.min.js"></script>
   <script src="./main.js"></script>
 </body>
