fix: 修改图片和音乐

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-	<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="https://music.163.com/outchain/player?type=2&id=543798909&auto=1&height=32" style="position:absolute;top:20px;left: 22%;"></iframe>
+	<!-- <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="https://music.163.com/outchain/player?type=2&id=543798909&auto=1&height=32" style="position:absolute;top:20px;left: 22%;"></iframe> -->
   <div class="wrapper">
 		
     <div class="init-box">
